form fixed on mobiles

--- a/src/sass/_contact.sass
+++ b/src/sass/_contact.sass
@@ -217,7 +217,6 @@
                     grid-row: 2/3
                     min-width: auto
                     position: relative
-                    background-color: transparent
                     width: 100%
                     height: 100%
                     #message
@@ -225,7 +224,8 @@
                     .btn
                         top: 98%
                         left: 50%
-
+                    .show-conf
+                        background-color: #292929
         .lower
             .container
                 padding: 2rem 0 1rem 0
